--- a/curso_html5/style.css
+++ b/curso_html5/style.css
@@ -1,61 +1,20 @@
 body {
-background: rgba(236, 211, 211, 0.767);
-max-width: 900px;
-margin: auto;
+
 }
 
-#title, .subtitle, .post_title {
-    color: rgba(65, 42, 190, 0.8);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: x-large
-    text-align: center;
-}
-
-.post_title {
-    font-size: large;
-    font-style: italic;
-    margin: 0;
-    margin-bottom: 15px;
-    text-align: center    ;
-}
-
-.post {
-    background: #fff;
-    padding: 15px;
-    border: 2px solid #505050 ;
-    margin: 0;
-    margin-bottom: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-    border-radius: 20px;
-    
-}
-
-.imagem {
-    border-radius: 50%;
-    margin-bottom: 15px;
+.container {
+    width: 10%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
     align-items: center;
-
 }
 
-.post_imagem {
-    border-radius: 50%;
-    margin-bottom: 15px;
-    width: auto;
-    align-items: center;
-
+.card {
+    height: 400px;
+    width: 500px;
+    background-image: ur('./planetas.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
-.post_content {
-    margin: 0;
-    margin-bottom: 15px;
-    text-align: center;
-    }
-
-.content_list {
-    list-style-type: none;
-    padding-left: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-    text-align: center;
-    }
